atlas: fix gap between modal-body and modal-footer

--- a/src/scss/atlas-theme/_modals.scss
+++ b/src/scss/atlas-theme/_modals.scss
@@ -104,7 +104,7 @@ h6.modal-title {
 
 		@media screen and (min-width: $grid-float-breakpoint) { // min-width: 768px
 			background-color: $modal-full-screen-desktop-body-bg;
-			bottom: 80px;
+			bottom: 73px;
 			top: 61px;
 		}
 	}
